# n3a

./: .env.example  .gitignore  .pnp.cjs  README.md  package-lock.json  package.json
backend/: check_keys.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: clients.py  files.py  meetings.py
backend/app/core/: storage.py  supabase.py
backend/app/models/: client.py  meeting.py
backend/app/serve/: graphRag.py  main.py  processor.py  script.py  serve.py
backend/app/serve/graphrag/index/: __init__.py  index.py
backend/app/serve/models/: azure_models.py  hf_models.py  openai_models.py
backend/graphRAG/00cb3a65-6ab6-4e94-982d-51b9a44a8900/: embeddings.json
backend/graphRAG/00cb3a65-6ab6-4e94-982d-51b9a44a8900/input/: client_description.txt  tmp1_efbtsr.txt  tmp2_0wo_28.txt  tmpdruhoxxt.txt  tmpfjmewutw.txt  tmpksiyi0lw.txt  tmpn67in51y.txt  tmpyho9cohz.txt
backend/graphRAG/7480ed96-01da-4667-9d1f-4f6fda106641/: embeddings.json
backend/graphRAG/7480ed96-01da-4667-9d1f-4f6fda106641/input/: client_description.txt
backend/transcripts/: 7480ed96-01da-4667-9d1f-4f6fda106641_transcript_20250413_052746.txt  7480ed96-01da-4667-9d1f-4f6fda106641_transcript_20250413_052952.txt
example-flow/: 1-meeting-transcript.csv  2-meeting-transcript-summaries.csv  client_info.json  extract_unannotated_input.sh  generate_dos_and_donts.py  generate_sentiments.py  generate_summaries.py  generate_transcripts.py  meeting_info.json  push_generated_clients.py  push_generated_meetings.py  push_generated_sentiments.py
frontend/: .pnp.cjs  index.html  (+2 more)
(+262 files in other folders)
