[build-system]
requires = ["uv>=0.1.0", "setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "Meeting Analytics Platform Backend"
authors = [{name = "PAC"}]
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "python-dotenv>=1.0.1",
    "supabase>=2.15.0",
    "pydantic>=2.6.1",
    "python-multipart>=0.0.9",
    "transformers>=4.40.0",
    "torch>=2.2.0",  # Required by torchaudio
    "torchaudio>=2.2.0; python_version >= '3.8'",  # With Python version constraint
    "openai>=1.12.0",
    "exceptiongroup>=1.0.0",
    "soundfile>=0.12.1"
]

[project.optional-dependencies]
audio = [
    "torchaudio[backends]>=2.2.0",  # Includes all audio backends
    "librosa>=0.10.0"  # Additional audio processing
]